# AlphaZeroChess

./: README.md  api_train.py
C_project/: CMakeLists.txt  alphazero_test.cpp  alphazero_train.cpp  model.py  pipeline.sh
C_project/lib/: alphazero.cpp  alphazero.h  game.cpp  game.h  mcts.cpp  mcts.h  node.cpp  node.h  params.h
lib/: model.py
